Thu Feb 13 16:24:22 2003  David Helder  <dhelder@umich.edu>

	* src/inetaddr.c (gnet_inetaddr_new_list_async_cb): Delete
	    using new_list_async_cancel, not new_async_cancel.  Bug!

	* src/inetaddr.c (gnet_inetaddr_new_list_async_cb): Don't
	    delete the ias after callback.  They are callee owned.
	    This fixes a bug.

	* src/inetaddr.c (gnet_inetaddr_new_list_async): Move ialist_free
   	    up.  (shouldn't matter)

	* src/inetaddr.c (gnet_inetaddr_get_name_async_cancel): Remove
	    watch only if set (we can remove it above).
	* src/inetaddr.c (gnet_inetaddr_get_name_async_cb): Set
	    watch to 0 afer it is removed.  This avoids gettting a
	    warning maybe.

	* src/inetaddr.c (gnet_inetaddr_get_name_async): IPv6-ize fork()
	    version.

	* src/socks.c (gnet_socks_get_version): Make env const.

Wed Feb 12 15:53:44 2003  David Helder  <dhelder@umich.edu>

	* tests/dns_test.pl: Add.
	* configure.ac: Add dns_test.pl to NETWORK_TESTS
	* Makefile.am (EXTRA_DIST): "

	* src/inetaddr.c (inetaddr_new_async_cb): ialist condition
	    backwards.

	* src/gnet-private.h (_GInetAddrNewListState ): Add in_callback
	    flag to GInetAddrNewListState-pthread.
	* src/inetaddr.c (gnet_inetaddr_new_list_async_cancel): Add
	   in_callback to guard against calling in callback.
	* src/inetaddr.c (inetaddr_new_list_async_pthread_dispatch): Set
	   in_callback.

	* examples/dnslookup.c (list_cb): Free the ialist.

	* src/inetaddr.c (gnet_inetaddr_get_name):
	s/assert/return_if_fail/.

	* src/inetaddr.c (gnet_inetaddr_new_async_cancel):
	s/assert/return_if_fail.
	* src/inetaddr.c (inetaddr_new_async_cb): Add return_if_fail.

	* src/inetaddr.c (gnet_inetaddr_new_async): Include state.  Fixes
	    bug.

Tue Feb 11 16:14:31 2003  David Helder  <dhelder@umich.edu>

	* *: Release 1.3.1

Fri Feb  7 14:00:18 2003  David Helder  <dhelder@umich.edu>

	* README: Added PAN to "Applications that use GNet"

Wed Feb  5 18:29:40 2003  David Helder  <dhelder@umich.edu>
