@@ -5,14 +5,14 @@ Please email gnet-dev@gnetlibrary.org with your comments.
 
 ========================================
 
-URI:
-- base URI support?
+PRE-RELEASE:
+  s/1.3/1.4 everywhere.
 
-Base64:
-- Unit test case
+URI:
+- base URI support?  (punt)
 
 Docs and examples:
-- Add server example that uses pthreads or gthreads.
+- Add server example that uses pthreads or gthreads.  (punt?)
 
 
 ========================================
