@@ -6,7 +6,7 @@
 AC_PREREQ([2.52])
 
 # Init autoconf and automake
-AC_INIT([gnet], [1.3.1], [gnet@gnetlibrary.org])
+AC_INIT([gnet], [1.3.2], [gnet@gnetlibrary.org])
 AC_CANONICAL_BUILD
 AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
 AM_MAINTAINER_MODE
@@ -22,7 +22,7 @@ AC_CONFIG_SRCDIR([src/gnet.c])
 # set GNET_BINARY_AGE _and_ GNET_INTERFACE_AGE to 0.
 GNET_MAJOR_VERSION=1
 GNET_MINOR_VERSION=3
-GNET_MICRO_VERSION=1
+GNET_MICRO_VERSION=2
 GNET_INTERFACE_AGE=0
 GNET_BINARY_AGE=0
 GNET_VERSION=$GNET_MAJOR_VERSION.$GNET_MINOR_VERSION.$GNET_MICRO_VERSION
@@ -39,10 +39,12 @@ LT_RELEASE=$GNET_MAJOR_VERSION.$GNET_MINOR_VERSION
 LT_CURRENT=`expr $GNET_MICRO_VERSION - $GNET_INTERFACE_AGE`
 LT_REVISION=$GNET_INTERFACE_AGE
 LT_AGE=`expr $GNET_BINARY_AGE - $GNET_INTERFACE_AGE`
+LT_CURRENT_MINUS_AGE=`expr $LT_CURRENT - $LT_AGE`
 AC_SUBST(LT_RELEASE)
 AC_SUBST(LT_CURRENT)
 AC_SUBST(LT_REVISION)
 AC_SUBST(LT_AGE)
+AC_SUBST(LT_CURRENT_MINUS_AGE)
 # Define version stuff
 AC_DEFINE_UNQUOTED(GNET_MAJOR_VERSION, $GNET_MAJOR_VERSION, [GNet major version])
 AC_DEFINE_UNQUOTED(GNET_MINOR_VERSION, $GNET_MINOR_VERSION, [GNet minor version] )
